--- a/DZ_18.1/DZ_18.1.vcxproj
+++ b/DZ_18.1/DZ_18.1.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="DZ_18.1.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Employeeh.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
